# cull-the-herd

./: .gitignore  CLAUDE.md  README.md  agents.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
src/photo_critic/: __init__.py  batch.py  cli.py  discovery.py  prepare.py  report.py
tests/: __init__.py  test_batch.py  test_discovery.py  test_prepare.py  test_report.py
